--- a/web/src/style.scss
+++ b/web/src/style.scss
@@ -7,6 +7,7 @@ body {
     -webkit-animation: Gradient 10s ease infinite;
     -moz-animation: Gradient 10s ease infinite;
     animation: Gradient 10s ease infinite;
+    font-family:sans-serif;
 }
 
 @-webkit-keyframes Gradient {
